# KTH-Neuro-Computing-Systems-Event-Based-Camera-eDVS4337

./: .gitignore  README.md
.github/workflows/: cmake.yml  codeql.yml  slsa-provenance.yml
camera/src/event_based_camera/: CMakeLists.txt  package.xml
camera/src/event_based_camera/config/: edvs_params.yaml
camera/src/event_based_camera/include/event_based_camera/: edvs_driver.hpp  event_types.hpp  evt_camera.hpp  filter_pipeline.hpp  libcaer_edvs.hpp  security.hpp
camera/src/event_based_camera/launch/: edvs_camera.launch
camera/src/event_based_camera/msg/: Control.msg  Event.msg  EventArray.msg
camera/src/event_based_camera/rust/edvs_processing/: Cargo.toml
camera/src/event_based_camera/rust/edvs_processing/src/: accumulator.rs  anti_flicker.rs  corner.rs  decay_accumulator.rs  decimation.rs  denoise.rs  event.rs  ffi.rs  frequency.rs  hot_pixel.rs  lib.rs  mask.rs  optical_flow.rs  polarity.rs  rate_stats.rs  refractory.rs  roi.rs  sits.rs  slicer.rs  stc.rs  time_surface.rs  transform.rs  voxel_grid.rs
camera/src/event_based_camera/rust/edvs_processing/tests/: integration_test.rs
camera/src/event_based_camera/src/: buf.hpp  edvs_driver.cpp  edvs_driver_node.cpp  event_based_camera.cpp  filter_pipeline.cpp  libcaer_edvs.cpp  security.cpp
