<?xml version="1.0"?>
<package format="2">
  <name>event_based_camera</name>
  <version>1.0.0</version>
  <description>
    Secure, modular ROS driver for the eDVS4337 event-based neuromorphic camera.
    Uses libcaer for device communication and a Rust library for event processing
    (denoising, hot pixel filtering).
  </description>

  <maintainer email="omkar@todo.todo">omkar</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/omkarbhoite25/KTH-Neuro-Computing-Systems-Event-Based-Camera-eDVS4337</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
